<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.parseworks</groupId>
    <artifactId>taker</artifactId>
    <version>1.0-SNAPSHOT</version>

    <name>Taker</name>
    <description>A fluent parser combinator library for Java 21+</description>
    <url>https://github.com/parseworks/taker</url>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/licenses/MIT</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>jasonbailey</id>
            <name>Jason Bailey</name>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/parseworks/taker.git</connection>
        <developerConnection>scm:git:ssh://github.com:parseworks/taker.git</developerConnection>
        <url>https://github.com/parseworks/taker/tree/main</url>
    </scm>

    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/parseworks/taker/issues</url>
    </issueManagement>

    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jmh.version>1.37</jmh.version>
        <jmh.include>.*</jmh.include>
        <jmh.warmupIterations>3</jmh.warmupIterations>
        <jmh.measurementIterations>5</jmh.measurementIterations>
        <jmh.forks>1</jmh.forks>
        <jmh.warmupTime>1s</jmh.warmupTime>
        <jmh.measurementTime>1s</jmh.measurementTime>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.10.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <tags>
                      <tag>
                        <name>apiNote</name>
                        <placement>a</placement>
                        <head>API Note:</head>
                      </tag>
                    </tags>
                    <failOnError>true</failOnError>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>jmh</id>
            <dependencies>
                <dependency>
                    <groupId>org.openjdk.jmh</groupId>
                    <artifactId>jmh-core</artifactId>
                    <version>${jmh.version}</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.openjdk.jmh</groupId>
                    <artifactId>jmh-generator-annprocess</artifactId>
                    <version>${jmh.version}</version>
                    <scope>test</scope>
                </dependency>
            </dependencies>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>build-helper-maven-plugin</artifactId>
                        <version>3.6.0</version>
                        <executions>
                            <execution>
                                <id>add-jmh-sources</id>
                                <phase>generate-test-sources</phase>
                                <goals>
                                    <goal>add-test-source</goal>
                                </goals>
                                <configuration>
                                    <sources>
                                        <source>src/jmh/java</source>
                                    </sources>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <version>3.11.0</version>
                        <configuration>
                            <annotationProcessorPaths>
                                <path>
                                    <groupId>org.openjdk.jmh</groupId>
                                    <artifactId>jmh-generator-annprocess</artifactId>
                                    <version>${jmh.version}</version>
                                </path>
                            </annotationProcessorPaths>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>3.3.0</version>
                        <configuration>
                            <executable>java</executable>
                            <classpathScope>test</classpathScope>
                            <arguments>
                                <argument>-cp</argument>
                                <classpath/>
                                <argument>org.openjdk.jmh.Main</argument>
                                <argument>${jmh.include}</argument>
                                <argument>-wi</argument>
                                <argument>${jmh.warmupIterations}</argument>
                                <argument>-i</argument>
                                <argument>${jmh.measurementIterations}</argument>
                                <argument>-f</argument>
                                <argument>${jmh.forks}</argument>
                                <argument>-w</argument>
                                <argument>${jmh.warmupTime}</argument>
                                <argument>-r</argument>
                                <argument>${jmh.measurementTime}</argument>
                            </arguments>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>jmh-profiler</id>
            <activation>
                <property>
                    <name>jmh.prof</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <configuration>
                            <arguments combine.self="override">
                                <argument>-cp</argument>
                                <classpath/>
                                <argument>org.openjdk.jmh.Main</argument>
                                <argument>${jmh.include}</argument>
                                <argument>-wi</argument>
                                <argument>${jmh.warmupIterations}</argument>
                                <argument>-i</argument>
                                <argument>${jmh.measurementIterations}</argument>
                                <argument>-f</argument>
                                <argument>${jmh.forks}</argument>
                                <argument>-w</argument>
                                <argument>${jmh.warmupTime}</argument>
                                <argument>-r</argument>
                                <argument>${jmh.measurementTime}</argument>
                                <argument>-prof</argument>
                                <argument>${jmh.prof}</argument>
                            </arguments>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
